Increase java heap space and PermGen